# OperationalSpace_WholeBodyControl

./: README.md
manipulator_unal_description/: CMakeLists.txt  command2test.txt  command_trajectory.txt  package.xml
manipulator_unal_description/config/: controller.yaml  effort_controller.yaml  effort_group_controller.yaml  group_pos_controller.yaml
manipulator_unal_description/launch/: gazebo_view.launch  load_group_controller.launch  view_model.launch  view_parsed_model.launch
manipulator_unal_description/rviz/: config.rviz
manipulator_unal_description/urdf/: manipulator.gazebo.xacro  manipulator.urdf  manipulator.urdf.xacro  manipulator.xacro  manipulator_backup.urdf.xacro  manipulator_backup1.urdf.xacro  manipulator_transmission.urdf.xacro
mob_manipulator_controller/: CMakeLists.txt  package.xml
mob_manipulator_controller/config/: config.yaml
mob_manipulator_controller/include/mob_manipulator_controller/: Mob_Manipulator_Controller.hpp
mob_manipulator_controller/include/osc_controller/: OSC_Controller.hpp
mob_manipulator_controller/launch/: osc_controller.launch
mob_manipulator_controller/src/: Load_model.cpp  Mob_Manipulator_Controller.cpp  Stack_Tasks.cpp  mob_manipulator_controller_node.cpp
mob_manipulator_controller/src/Controller/: OSC_Controller.cpp
mob_manipulator_controller/src/Controller/Joint_limits/: Intermediate_value.cpp  Repulsive_potencials.cpp  Saturation_joint_space.cpp
mob_manipulator_controller/src/Controller/Orientation/: Error_functions.cpp  Orientation_Manipulator.cpp  Orientation_Mob_Manipulator.cpp
mob_manipulator_controller/src/Controller/Position/: Position_Manipulator.cpp  Position_Mob_Manipulator.cpp  Position_Mobile_Robot.cpp
mob_manipulator_controller/src/Tasks/: Effort_Tasks.cpp
mob_manipulator_controller/src/Tasks/Joint_limits/: Intermediate_value.cpp  Repulsive_potencials.cpp  Saturation_joint_space.cpp
mob_manipulator_controller/src/Tasks/Orientation/: Error_functions.cpp  Orientation_Manipulator.cpp  Orientation_Mob_Manipulator.cpp
mob_manipulator_controller/src/Tasks/Position/: Position_Manipulator.cpp  Position_Mob_Manipulator.cpp  Position_Mobile_Robot.cpp
mob_manipulator_controller/src/osc_controller/: OSC_Controller.cpp
mob_manipulator_controller/src/osc_controller/Joint_limits/: Intermediate_value.cpp  Repulsive_potentials.cpp  Saturation_joint_space.cpp
mob_manipulator_controller/src/osc_controller/Orientation/: Error_functions.cpp  Orientation_Manipulator.cpp  Orientation_Mob_Manipulator.cpp
mob_manipulator_controller/src/osc_controller/Position/: Position_Manipulator.cpp  Position_Mob_Manipulator.cpp  Position_Mobile_Robot.cpp
mob_manipulator_controller/src/osc_controller/Whole_Body_Control/: Admittance_controller.cpp
mobile_manipulator_msgs/: CMakeLists.txt  package.xml
mobile_manipulator_msgs/msg/: JointData.msg  Joints.msg  MobileManipulator.msg  OrientationData.msg  PositionData.msg  (+4 more)
mobile_manipulator_unal_description/: CMakeLists.txt  cmd_traj_mob_mani.txt  package.xml
mobile_manipulator_unal_description/config/: ekf_config.yaml  manipulator_effort_controller.yaml  mobile_vel_controller.yaml  trajectory_controller.yaml
mobile_manipulator_unal_description/launch/: gazebo_spawn_multiple.launch  gazebo_view.launch  gazebo_view_hybrid.launch  spawn_model.launch  view_model.launch
mobile_manipulator_unal_description/rviz/: config.rviz  multiple_robots_config.rviz
mobile_manipulator_unal_description/urdf/: mobile_manipulator.urdf  mobile_manipulator.xacro
mobile_robot_unal_description/: CMakeLists.txt  package.xml
mobile_robot_unal_description/config/: effort_controller.yaml  effort_group_controller.yaml  ekf_params.yaml  velocity_group_controller.yaml  velocity_group_controller2.yaml
mobile_robot_unal_description/include/mobile_robot_unal_description/: MobileOdom.hpp
mobile_robot_unal_description/launch/: gazebo_view.launch  view_model.launch
mobile_robot_unal_description/rqt/: rqt_multiplot_pos_EKF_comparison.xml  rqt_multiplot_pos_comparison.xml  rqt_multiplot_pos_full.xml
mobile_robot_unal_description/rviz/: config.rviz  config_EKF.rviz
mobile_robot_unal_description/scripts/: test_trajectory.py
mobile_robot_unal_description/src/: MobileOdom.cpp  mobile_odom_node.cpp
mobile_robot_unal_description/urdf/: mobile_base.gazebo.xacro  mobile_base.urdf.xacro  mobile_base.xacro  mobile_base_transmission.urdf.xacro
mobile_robot_unal_description/urdf/Robotino/: model.config  model.sdf
mobile_robot_unal_description/worlds/: empty_world.world
mobile_robot_vel_publisher/: CMakeLists.txt  package.xml
osc_hybrid_mob_manipulator/: CMakeLists.txt  package.xml
osc_hybrid_mob_manipulator/config/: config.yaml
osc_hybrid_mob_manipulator/include/osc_hybrid_mob_manipulator/: Effort_Tasks.hpp  OSC_Hybrid.hpp  Velocity_Tasks.hpp
osc_hybrid_mob_manipulator/launch/: osc_hybrid_controller.launch
osc_hybrid_mob_manipulator/src/: Effort_Tasks.cpp  OSC_Hybrid.cpp  Old_tasks.cpp  Orientation_Tasks.cpp  Position_Tasks.cpp  Velocity_Tasks.cpp  osc_hybrid_node.cpp
osc_hybrid_mob_manipulator/src/Tasks/: Effort_Tasks.cpp
osc_hybrid_mob_manipulator/src/Tasks/Joint_limits/: Intermediate_value.cpp  Repulsive_potencials.cpp  Saturation_joint_space.cpp
osc_hybrid_mob_manipulator/src/Tasks/Orientation/: Error_functions.cpp  Orientation_Manipulator.cpp  Orientation_Mob_Manipulator.cpp
osc_hybrid_mob_manipulator/src/Tasks/Position/: Position_Manipulator.cpp  Position_Mob_Manipulator.cpp  Position_Mobile_Robot.cpp
robotino_effort_publisher/: CMakeLists.txt  package.xml
robotino_vel_publisher/: CMakeLists.txt  package.xml
robotino_vel_publisher/config/: config.yaml  config2.yaml
robotino_vel_publisher/include/robotino_vel_publisher/: Global_Vel_Pub.hpp  Local_Vel_Pub.hpp
robotino_vel_publisher/launch/: global_vel_publisher.launch  global_vel_robotino.launch  local_vel_publisher.launch
robotino_vel_publisher/src/: Global_Vel_Pub.cpp  Local_Vel_Pub.cpp  global_vel_publisher_node.cpp  local_vel_publisher_node.cpp
test_trajectories_osc/: CMakeLists.txt  package.xml
(+35 files in other folders)
