<?xml version="1.0"?>
<package format="2">
  <name>manipulator_unal_description</name>
  <version>0.0.1</version>
  <description>The manipulator_unal_description package</description>

  <author email="jmfajardod@gmail.com">josefajardo</author>
  <maintainer email="jmfajardod@gmail.com">josefajardo</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>

  <build_export_depend>roscpp</build_export_depend>

  <exec_depend>roscpp</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export></export>

</package>
